Fix horizontal scrolling on mobile issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@
 html{
     font-size: 62.5%;
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 :root {
@@ -33,6 +34,8 @@ body{
     font-family: 'Inter', Arial, Helvetica, sans-serif;
     font-size: 2.4rem;
     line-height: 1.5;
+    overflow-x: hidden;
+    position: relative;
 }
 
 h1, h2, h3 {
